# artifacts/api-server/src/routes/index.ts
@@ -1,7 +1,7 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import restaurantsRouter from "./restaurants";
-import reviewsRouter from "./reviews";
+import nomsRouter from "./noms";
 import usersRouter from "./users";
 import statsRouter from "./stats";
 
@@ -9,7 +9,7 @@ const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(restaurantsRouter);
-router.use(reviewsRouter);
+router.use(nomsRouter);
 router.use(usersRouter);
 router.use(statsRouter);
 
